@startuml class_diagram
abstract class FurnitureFactory {
    +create_chair(): Chair
    +create_sofa(): Sofa
    +create_coffee_table(): CoffeeTable
}

class ClassicFurnitureFactory {
    +create_chair(): Chair
    +create_sofa(): Sofa
    +create_coffee_table(): CoffeeTable
}

class ModernFurnitureFactory {
    +create_chair(): Chair
    +create_sofa(): Sofa
    +create_coffee_table(): CoffeeTable
}

class VictorianFurnitureFactory {
    +create_chair(): Chair
    +create_sofa(): Sofa
    +create_coffee_table(): CoffeeTable
}

abstract class Chair {
    +sit_on(): String
}

abstract class Sofa {
    +lie_on(): String
}

abstract class CoffeeTable {
    +look_at(): String
}

class ClassicChair {
    +sit_on(): String
}

class ClassicSofa {
    +lie_on(): String
}

class ClassicCoffeeTable {
    +look_at(): String
}

class ModernChair {
    +sit_on(): String
}

class ModernSofa {
    +lie_on(): String
}

class ModernCoffeeTable {
    +look_at(): String
}

class VictorianChair {
    +sit_on(): String
}

class VictorianSofa {
    +lie_on(): String
}

class VictorianCoffeeTable {
    +look_at(): String
}

class FurnitureCompany {
    -name: String
    +present_furniture(factory: FurnitureFactory): void
}

FurnitureFactory <|-- ClassicFurnitureFactory
FurnitureFactory <|-- ModernFurnitureFactory
FurnitureFactory <|-- VictorianFurnitureFactory

Chair <|-- ClassicChair
Chair <|-- ModernChair
Chair <|-- VictorianChair

Sofa <|-- ClassicSofa
Sofa <|-- ModernSofa
Sofa <|-- VictorianSofa

CoffeeTable <|-- ClassicCoffeeTable
CoffeeTable <|-- ModernCoffeeTable
CoffeeTable <|-- VictorianCoffeeTable

FurnitureCompany --> FurnitureFactory
FurnitureCompany --> Chair
FurnitureCompany --> Sofa
FurnitureCompany --> CoffeeTable

@enduml
